Fixed overlapping events in add points page and gaps in member lists page. Added color to headers in list pages.

--- a/public/app/app.styles.css
+++ b/public/app/app.styles.css
@@ -67,6 +67,18 @@
   padding-bottom: 10px;
 }
 
+.selportalButton:hover {
+  background-color: #a2760b;
+  color: rgb(23, 23, 23) ;
+  border-style: solid;
+  border-color: rgba(71, 72, 75, .5) ;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right:10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .portalButton {
   background-color: rgba(71, 72, 75, 0);
   color: white;
@@ -133,6 +145,18 @@
   height: 5px;
   background-color: white;
   margin: 6px 0;
+}
+
+.removeEventButton{
+  background-color: rgba(71, 72, 75, 0);
+  color: white;
+  border-style: solid;
+  border-color: rgba(71, 72, 75, .5) ;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right:10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 /* Home Page */
@@ -462,4 +486,9 @@
 
 .listMemberDiv{
   height: 100vh;
+}
+
+.headerColor{
+  background-color: rgba(7, 36, 113, 0.9);
+  color: white;
 }
